<resources>
    <string name="app_name">ArtiQuest</string>
    <string name="ss_elipse1">Elipse left Splash Screen</string>
    <string name="ss_elipse2">Elipse right Splash Screen</string>
    <string name="logo">Logo Application</string>
    <string name="welcome">WELCOME</string>
    <string name="feature1">ARTISCAN</string>
    <string name="explain_feature1">This feature supports you to \nfind out artifact information \nthrough image scanning.</string>
    <string name="feature2">ARTIXPLORE</string>
    <string name="explain_feature2">This feature to search artifacts by \nname with filters to make it easier for \nyou to find the artifacts you want.</string>
    <string name="feature3">LISTEN</string>
    <string name="explain_feature3">This feature helps you get \ninformation in audio form.</string>
    <string name="quote_welcome">"Every artifact we find is a piece of \nthe puzzle that helps us to understand \nthe past." - Indiana Jones</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_sign_in">Please Sign In to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="signin_google">Continue with Google</string>
    <string name="please_register">Please Register to continue</string>
    <string name="username">Username</string>
    <string name="explaination_apk">"Discover the wonders of \nIndonesia's cultural heritage. \n\nWith ArtiQuest, you can \nexplore a centralized \ndatabase of artifacts, right at \nyour fingertips."</string>

    <string name="email_warning_invalid">Wrong email entered</string>
    <string name="number_warning_empty">Please input your phone number</string>
    <string name="number_warning_invalid">Wrong phone number entered</string>
    <string name="username_warning_invalid">Wrong username entered</string>
    <string name="username_warning_empty">Please input your username</string>
    <string name="name_warning_empty">Please input your name</string>
    <string name="email_warning_empty">Please input your email</string>
    <string name="password_warning_empty">Please input your password</string>
    <string name="password_warning_length">"Password can't be less than 8 characters"</string>
    <string name="password_warning_unique">Passwords must have uppercase letters and numbers</string>
    <string name="circle_welcome">Circle Welcome</string>
    <string name="previous_button">Previous Button</string>
    <string name="next_button">Next Button</string>
    <string name="back">Back</string>
    <string name="circle_lr">Circle LR</string>
    <string name="explain_forgot_pass">Please Enter Your Email Address To Receive a Verification Reset Password</string>
    <string name="send">Send</string>

    <string name="web_client_id">241005190579-clvn2m9gn6l47mbpl2fvhecu3ber42ql.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="circle_password">Circle Password</string>
    <string name="name">Name</string>
    <string name="pers_in">Personal Information</string>
    <string name="priv_in">Private Information</string>
    <string name="mail">Email</string>
    <string name="phone">Phone</string>
    <string name="artiscan">ARTISCAN</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="rectangle_detail">Rectangle Detail</string>
    <string name="picture_profile">Picture Profile</string>
    <string name="logout">Logout</string>
    <string name="cancel_save">Cancel Save</string>
    <string name="save">Save</string>

    <string name="searchbar_hint">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="artifact_name">Artifact Name</string>
    <string name="artifact_picture">Artifact Picture</string>
    <string name="description">Description</string>
    <string name="explanation_description">Explanation Description</string>
    <string name="location_artifacts">Location of Artifacts</string>
    <string name="artifact_data">Artifact Data</string>

</resources>