<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_montserrat"
        android:lineSpacingExtra="-1sp"
        android:text="@string/feature1"
        android:textAppearance="@style/heading1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_nunito"
        android:layout_marginTop="24dp"
        android:lineSpacingExtra="-3sp"
        android:text="@string/explain_feature1"
        android:textAlignment="center"
        android:textAppearance="@style/heading2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_button"
        style="@style/font_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_button_1"
        android:fontFamily="@font/font_roboto"
        android:paddingStart="45dp"
        android:paddingTop="16dp"
        android:paddingEnd="45dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/dark_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        style="@style/font_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_button_2"
        android:fontFamily="@font/font_roboto"
        android:paddingStart="45dp"
        android:paddingTop="16dp"
        android:paddingEnd="45dp"
        android:paddingBottom="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/dark_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline33"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>