<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".view.profile.DetailProfileActivity">



    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/rectangle_4"
        app:layout_constraintBottom_toBottomOf="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        app:layout_constraintBottom_toBottomOf="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Edit Profile" />

    <ImageView
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="center"
        android:textColor="@color/light_brown"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="GUEST" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="21dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/pers_in"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <TextView
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/name"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/username"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="21dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/priv_in"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <TextView
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/mail"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <TextView
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/font_montserrat"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/phone"
        android:textColor="@color/light_brown"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

</androidx.constraintlayout.widget.ConstraintLayout>